--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-toastify": "^10.0.4",
     "sharp": "^0.33.1",
     "zustand": "^4.4.7"
   },
